[project]
name = "bloodhound-ce-ctl"
version = "0.1.0"
description = "A CLI tool for managing BloodHound CE — upload collection data, clear the database, and poll job status."
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Security",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/Mojo8898/bloodhound-ce-ctl"

[project.scripts]
bloodhound-ce-ctl = "bloodhound_ce_ctl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
